--- a/estilo/style.css
+++ b/estilo/style.css
@@ -5,7 +5,7 @@
 
 @font-face{
     font-family: 'idroid';
-    src: url('/fontes/idroid.otf') format("opentype");
+    src: url('../fontes/idroid.otf') format("opentype");
 }
 
 
